--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0  align-items-center  d-flex justify-content-center shadow-lg mb-5">
-            <img class="rounded-lg-3" src="img/bgmi.jpeg" alt="" height="400px">
+            <img class="rounded-lg-3" src="img/bgmi.jpeg" alt="" height="430px">
         </div>
       </div>
     </div>
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0  align-items-center d-flex justify-content-center  shadow-lg mb-5 align-items-center">
-            <img class="rounded-lg-3" src="img/codeclash.jpeg" alt="" height="400px">
+            <img class="rounded-lg-3" src="img/codeclash.jpeg" alt="" height="430px">
         </div>
       </div>
     </div>
@@ -135,7 +135,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 align-items-center d-flex justify-content-center  shadow-lg mb-5">
-            <img class="rounded-lg-3" src="img/futura.jpg" alt="" height="400px">
+            <img class="rounded-lg-3" src="img/futura.jpg" alt="" height="430px">
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 align-items-center  d-flex justify-content-center  shadow-lg mb-5">
-            <img class="rounded-lg-3" src="img/ideaharbour.jpeg" alt="" height="400px">
+            <img class="rounded-lg-3" src="img/ideaharbour.jpeg" alt="" height="430px">
         </div>
       </div>
     </div>
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 align-items-center d-flex justify-content-center  shadow-lg mb-5">
-            <img class="rounded-lg-3" src="img/cricket.jpeg" alt="" height="400px">
+            <img class="rounded-lg-3" src="img/cricket.jpeg" alt="" height="430px">
         </div>
       </div>
     </div>
@@ -186,7 +186,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 align-items-center d-flex justify-content-center  shadow-lg mb-5">
-            <img class="rounded-lg-3" src="img/datathon.jpeg" alt="" height="400px">
+            <img class="rounded-lg-3" src="img/datathon.jpeg" alt="" height="430px">
         </div>
       </div>
     </div>
@@ -203,7 +203,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 align-items-center d-flex justify-content-center  shadow-lg mb-5">
-            <img class="rounded-lg-3" src="img/simul8.jpg" alt="" height="400px">
+            <img class="rounded-lg-3" src="img/simul8.jpg" alt="" height="430px">
         </div>
       </div>
     </div>
@@ -220,7 +220,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 align-items-center d-flex justify-content-center  shadow-lg ">
-            <img class="rounded-lg-3" src="img/treasurehunt.jpeg" alt="" height="400px">
+            <img class="rounded-lg-3" src="img/treasureHunt.jpeg" alt="" height="430px">
         </div>
       </div>
     </div>
