--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </div>
         </div>
         <div class="col-lg-4 offset-lg-1 p-0 align-items-center d-flex justify-content-center  shadow-lg mb-5">
-            <img class="rounded-lg-3" src="img/futura.jpg" alt="" height="430px">
+            <img class="rounded-lg-3" src="img/futura.jpeg" alt="" height="430px">
         </div>
       </div>
     </div>
